# aims

./: .gitattributes  .gitignore  CLAUDE.md  FRAMEWORK_EVAL_PLAN.md  LICENSE  ONBOARDING.md  PILOT_FEATURE_REPORT.md  PILOT_HOLISTIC_REPORT.md  PILOT_MEDIUM_LEAN_REPORT.md  PILOT_MEDIUM_REPORT.md  PILOT_RETRY_REPORT.md  README.md  RENAME_VERIFICATION.md  books-init-queue.yaml  pyproject.toml
.claude/: ais-mode  books_checkpoint.json  settings.json
.claude-plugin/: manifest.json  marketplace.json  plugin.json
.claude/commands/: adr.md  agents-experts.md  books-audit.md  books-init.md  books-update.md  done.md  encode-book.md  experts.md  find-book.md  plan.md  (+5 more)
.github/: copilot-instructions.md
agents/: _baseline.md  _planner.md  _router.md  _router_pipeline.md  _schema.md  _validator.md  book_encoder.md  book_finder.md  debugger.md  implementer.md  registry.md  router.md  test_strategist.md  tester.md
commands/: books-status.md  done.md  init-workflow.md  install-on.md  plan.md  query-knowledge.md
core/: agent_config.py
harness/: __init__.py  cli.py  demo.py  demo_live.py  dispatcher.py  envelope.py  executor.py  frontmatter.py  registry.py  state.py  tracer.py
runner/: run.py
schemas/: envelope.v1.json  plan.v1.json  verdict.v1.json
templates/: CLAUDE.md.tmpl  adr-0001.md.tmpl  adr-readme.md.tmpl  plan-template.md.tmpl
tests/: consolidate.sh  copies-identical.sh  exit-plan-mode.sh  inform-never-block.sh  marker.sh  requirements.sh  router-auto-plan.sh  test_envelope.py  test_executor_integration.py  test_frontmatter.py  test_registry.py  test_state.py
(+198 files in other folders)
